# pyversus

./: .gitignore  AGENTS.md  ALIGNMENT.md  CODEX.md  README.md  README.qmd  benchmark.html  genindex.html  getting-started.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  ty.toml
.doctrees/: benchmark.doctree  environment.pickle  getting-started.doctree  index.doctree
.doctrees/reference/: comparison.doctree  index.doctree
.github/workflows/: docs.yaml  python-tests.yaml
_sources/: benchmark.rst.txt  getting-started.rst.txt  index.rst.txt
_static/css/: custom.css
_static/js/: benchmark_charts.js
_static/ts/: benchmark_charts.ts
docs/: api.md  getting-started.md  index.md
docs/reference/: compare.md  comparison.md  errors.md  examples.md
docs_api/source/: benchmark.rst  conf.py  getting-started.rst  index.rst
pr-11/: .buildinfo  404.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
pr-11/.doctrees/: environment.pickle  getting-started.doctree  index.doctree
pr-11/_sources/: getting-started.rst.txt
pr-11/api/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pr-11/getting-started/: index.html
pr-11/reference/: compare.html  examples.html
pr-11/search/: search_index.json
pr-11/src/: quickstart.py
pr-11/stylesheets/: extra.css
pr-12/: .buildinfo  getting-started.html  searchindex.js
pr-12/.doctrees/: environment.pickle  getting-started.doctree
pr-12/reference/: compare.html
pr-13/: getting-started.html  objects.inv  searchindex.js
pr-13/.doctrees/: environment.pickle  index.doctree
pr-13/_sources/: getting-started.rst.txt
pr-13/reference/: compare.html
pr-14/.doctrees/: environment.pickle
pr-14/reference/: errors.html
pr-15/: objects.inv  searchindex.js
pr-15/.doctrees/: environment.pickle
pr-15/reference/: examples.html
pr-16/: search.html
pr-16/.doctrees/: environment.pickle
pr-17/: getting-started.html  py-modindex.html
pr-17/.doctrees/: environment.pickle
pr-18/: searchindex.js
pr-18/.doctrees/: environment.pickle  getting-started.doctree
pr-18/_sources/: index.rst.txt
pr-19/: .buildinfo  benchmark.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
reference/: compare.html  comparison.html  errors.html  examples.html  index.html
scripts/: pre_push.sh  update_readme.py
tests/: conftest.py  test_compare.py  test_slice_diffs.py  test_slice_unmatched.py  test_value_diffs.py  test_weave_diffs.py
(+135 files in other folders)
