[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyversus"
version = "0.1.0"
description = "Compare two relations quickly using DuckDB"
readme = "README.md"
authors = [{name = "versus authors"}]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
  "duckdb>=1.0.0",
  "typing-extensions>=4.0.0; python_version < \"3.8\""
]

[project.urls]
Homepage = "https://github.com/eutwt/pyversus"
Documentation = "https://eutwt.github.io/pyversus/"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5; python_version >= \"3.8\"",
  "mkdocs-material>=9.5; python_version >= \"3.8\"",
  "mkdocstrings[python]>=0.24; python_version >= \"3.8\"",
  "mkdocs-autorefs>=1.2; python_version >= \"3.8\"",
  "ruff>=0.4; python_version >= \"3.8\""
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
